# bms-info-extender

./: .gitignore  LICENSE  README.md  config.ini.sample  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.codex/: AGENTS.md
script/: bms_data_compressor.py  bms_score_compressor.py  build_preview_runtime.mjs  build_preview_targets.mjs  build_score_parser_wasm.ps1  common.py  generate_score_parser_fixture_report.mjs  lr2_bmsid_mapper.py  pipeline_runner.py  r2_common.py  r2_uploader.py  release_score_parser.ps1  stella_songid_mapper.py  sync_score_parser_current.ps1
script/tests/: test_bms_data_compressor.py
script/used/: backfill_bmsdata_cache_control.py  r2_score_uploader.py
shared/preview-runtime/: bms-info-data.js  bms-info-data.test.js  bms-info-graph.js  bms-info-graph.test.js  index.js  index.test.js  request.js  score-viewer-controller.js  score-viewer-controller.test.js  score-viewer-model.js  score-viewer-model.test.js  score-viewer-renderer.js  score-viewer-renderer.test.js
site/: index.html
site/dev/score-viewer/: app.js  index.html  styles.css
tampermonkey/: bms_info_extender.user.js  generated_preview_runtime.generated.js
tampermonkey/src/: main.js  userscript-header.txt
web/score-parser-runtime/: package.json
web/score-parser-runtime/src/: dto.js  score_loader.d.ts  (+2 more)
web/score-parser-wasm/: Cargo.toml
web/score-parser-wasm/js/: score_loader.d.ts  score_loader.js
web/score-parser-wasm/src/: api.rs  bms_adapter.rs  bmson_adapter.rs  decode.rs  detect.rs  dto.rs  lib.rs  tests.rs  warning_map.rs
(+16 files in other folders)
