[project]
name = "bms-info-extender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.70",
    "brotli>=1.2.0",
    "pandas>=3.0.1",
    "polars[rtcompat]>=1.39.2",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "tqdm>=4.67.3",
]
